--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,61 @@
+@font-face {
+    font-family: 'Helvetica';
+    src: url('../fonts/HelveticaNowText-Regular.otf'); /* IE9 Compat Modes */
+    src: url('../fonts/HelveticaNowText-Regular.otf') format('opentype');
+    font-style: normal;
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Helvetica';
+    src: url('../fonts/HelveticaNowText-RegIta.otf'); /* IE9 Compat Modes */
+    src: url('../fonts/HelveticaNowText-RegIta.otf') format('opentype');
+    font-style: italic;
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Helvetica';
+    src: url('../fonts/HelveticaNowText-Medium.otf'); /* IE9 Compat Modes */
+    src: url('../fonts/HelveticaNowText-Medium.otf') format('opentype');
+    font-style: normal;
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Helvetica';
+    src: url('../fonts/HelveticaNowText-MediumItalic.otf'); /* IE9 Compat Modes */
+    src: url('../fonts/HelveticaNowText-MediumItalic.otf') format('opentype');
+    font-style: italic;
+    font-weight: 500;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.flickity-prev-next-button.next {
+    right: -60px!important;
+}
+.flickity-prev-next-button.previous {
+    left: -60px!important;
+}
+.equipments .flickity-button {
+    background-color: transparent;
+}
+.illustration-box img {
+    max-height: calc(80vh - (176px + 24px));
+}
+.illustration-box .st0 {
+  display: none;
+}
+.illustration-box .st1 {
+    display: inline;
+    fill: #F8BFBA;
+}
+.illustration-box .st2 {
+    fill: transparent;
+    stroke: #F8C0BB;
+    stroke-miterlimit: 10;
+    /*transition-property: fill;*/
+}
