--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -110,3 +110,10 @@ body {
 nav a.active {
     @apply text-white;
 }
+.research-arrow:after {
+    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36.13 12.17'%3E%3Cpolyline fill='%23101526' stroke='%23ffffff' points='35.55 12.67 18.12 0.79 0.77 12.67'/%3E%3C/svg%3E");
+    position: absolute;
+    top: -3.6%;
+    left: 3%;
+    width: 36px;
+}
